--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
   <div class="banner-swiper-main-wrapper-one">
     <div class="banner-video-wrapper">
       <video class="banner-video" autoplay muted loop playsinline>
-        <source src="assets/videos/hero.MP4" type="video/mp4" />
+        <source src="/assets/Hero.MP4" type="video/mp4" />
       </video>
 
       <div class="banner-video-overlay"></div>
