--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                           </p>
                         </div>
                         <div class="progress-area-about-wrapper">
-                          <div class="progress-wrapper-main">
+                          <!-- <div class="progress-wrapper-main">
                             <div class="single-progress-area-h" data-sal-delay="150" data-sal="slide-up"
                               data-sal-duration="800">
                               <div class="progress-top">
@@ -584,10 +584,7 @@
                                   style="width: 85%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                               </div>
                             </div>
-                          </div>
-                          <div class="round-progress">
-                            <img src="assets/images/about/progress.svg" alt="about" />
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -779,131 +776,112 @@
             <div class="title-left-wrapper">
               <span class="pre">Industries We Serve</span>
               <h2 class="title rts-text-anime-style-1">
-                We support organisations across different sectors with
-                dependable IT and network services.
+                Reliable IT & Network Solutions Across Industries
               </h2>
             </div>
             <div class="right-area">
-              <a href="pages/impact.html" class="btn-line"><span>View All Projects</span>
-                <i class="fa-solid fa-chevron-right"></i></a>
+              <a href="pages/impact.html" class="btn-line">
+                <span>View All Projects</span>
+                <i class="fa-solid fa-chevron-right"></i>
+              </a>
             </div>
           </div>
         </div>
       </div>
+
       <div class="row g-5 mt--10">
         <div class="col-lg-12">
           <div class="swiper mySwiper-case-one">
             <div class="swiper-wrapper">
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/01.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span>Government & Public Sector</span>
-                    <h5 class="title">
-                      Technology support for departments, offices, and
-                      statewide digital systems.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">Government & Public Sector</span>
                   </a>
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/02.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span>Banking & Financial Services (BFSI)</span>
-                    <h5 class="title">
-                      Secure networks, systems management, and reliable IT
-                      operations.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">Banking & Financial Services</span>
                   </a>
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/03.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span>Telecom</span>
-                    <h5 class="title">
-                      Network setup, connectivity support, and infrastructure
-                      services.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">Telecom</span>
                   </a>
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/04.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span>Steel & Power</span>
-                    <h5 class="title">
-                      Site connectivity, hardware support, and monitoring
-                      solutions.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">Steel & Power</span>
                   </a>
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/04.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span>Metal & Mining</span>
-                    <h5 class="title">
-                      Communication networks, equipment connectivity, and
-                      on-site IT support.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">Metal & Mining</span>
                   </a>
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/04.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span>Cement & Chemical</span>
-                    <h5 class="title">
-                      Stable IT setups and plant-level connectivity systems.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">Cement & Chemical</span>
                   </a>
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/04.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span> Education & Universities</span>
-                    <h5 class="title">
-                      Campus networks, IT labs, and administrative systems.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">Education & Universities</span>
                   </a>
                 </div>
               </div>
+
               <div class="swiper-slide">
                 <div class="single-case-style-one">
                   <a href="pages/impact.html" class="thumbnail-case">
                     <img src="assets/images/case/04.webp" alt="case" />
                   </a>
-                  <a href="pages/impact.html" class="inner-content">
-                    <span>NGO & Development Sector</span>
-                    <h5 class="title">
-                      Simple, scalable IT solutions for project teams and
-                      field operations.
-                    </h5>
+                  <a href="pages/impact.html" class="inner-content" style="text-align: center;">
+                    <span style="display: block;">NGO & Development Sector</span>
                   </a>
                 </div>
               </div>
+
             </div>
             <div class="swiper-pagination"></div>
           </div>
@@ -911,6 +889,9 @@
       </div>
     </div>
   </div>
+
+
+
 
   <!-- rts case studies area start -->
   <div class="rts-case-studies rts-section-gap">
