--- a/pages/connect.html
+++ b/pages/connect.html
@@ -26,6 +26,11 @@
       as="style"
     />
     <link rel="stylesheet preload" href="../assets/css/style.css" as="style" />
+    <link
+      rel="stylesheet preload"
+      href="../assets/css/mobile-optimizations.css"
+      as="style"
+    />
   </head>
   <body>
     <header class="header-one header-relative header--sticky">
@@ -179,6 +184,26 @@
                                         </h5>
                                         <p class="details">
                                           IoT, blockchain, and emerging systems.
+                                        </p>
+                                      </div>
+                                    </div>
+                                  </a>
+                                </li>
+                                <li>
+                                  <a href="software-engineering.html">
+                                    <div class="single-service-menu">
+                                      <div class="icon">
+                                        <img
+                                          src="../assets/images/feature/07.svg"
+                                          alt="Emerging Tech"
+                                        />
+                                      </div>
+                                      <div class="info">
+                                        <h5 class="title">
+                                          Software Engineering Services
+                                        </h5>
+                                        <p class="details">
+                                          design and Development applications
                                         </p>
                                       </div>
                                     </div>
@@ -680,5 +705,6 @@
     <script defer src="../assets/js/vendor/bootstrap.min.js"></script>
     <script defer src="../assets/js/plugins/swiper.js"></script>
     <script defer src="../assets/js/main.js"></script>
+    <script defer src="../assets/js/mobile-optimizations.js"></script>
   </body>
 </html>
