--- a/pages/impact.html
+++ b/pages/impact.html
@@ -44,6 +44,11 @@
       as="style"
     />
     <link rel="stylesheet preload" href="../assets/css/style.css" as="style" />
+    <link
+      rel="stylesheet preload"
+      href="../assets/css/mobile-optimizations.css"
+      as="style"
+    />
     <style>
       /* Transparent header rules (from digix-main) */
       .header-transparent {
@@ -469,6 +474,26 @@
                                         </h5>
                                         <p class="details">
                                           IoT, blockchain, and emerging systems.
+                                        </p>
+                                      </div>
+                                    </div>
+                                  </a>
+                                </li>
+                                <li>
+                                  <a href="software-engineering.html">
+                                    <div class="single-service-menu">
+                                      <div class="icon">
+                                        <img
+                                          src="../assets/images/feature/07.svg"
+                                          alt="Emerging Tech"
+                                        />
+                                      </div>
+                                      <div class="info">
+                                        <h5 class="title">
+                                          Software Engineering Services
+                                        </h5>
+                                        <p class="details">
+                                          design and Development applications
                                         </p>
                                       </div>
                                     </div>
@@ -1176,6 +1201,7 @@
     <script defer src="../assets/js/vendor/bootstrap.min.js"></script>
     <script defer src="../assets/js/plugins/swiper.js"></script>
     <script defer src="../assets/js/main.js"></script>
+    <script defer src="../assets/js/mobile-optimizations.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const projectBlocks = document.querySelectorAll(".project-block-four");
