--- a/pages/about.html
+++ b/pages/about.html
@@ -44,9 +44,10 @@
       as="style"
     />
     <link rel="stylesheet preload" href="../assets/css/style.css" as="style" />
+
     <link
       rel="stylesheet preload"
-      href="../assets/css/mobile-optimizations.css"
+      href="../assets/css/mobile-nav.css"
       as="style"
     />
   </head>
@@ -1189,5 +1190,6 @@
     <script defer src="../assets/js/plugins/swiper.js"></script>
     <script defer src="../assets/js/main.js"></script>
     <script defer src="../assets/js/mobile-optimizations.js"></script>
+    <script defer src="../assets/js/mobile-nav.js"></script>
   </body>
 </html>
