--- a/pages/impact.html
+++ b/pages/impact.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet preload" href="../assets/css/style.css" as="style" />
     <link
       rel="stylesheet preload"
-      href="../assets/css/mobile-optimizations.css"
+      href="../assets/css/mobile-nav.css"
       as="style"
     />
     <style>
@@ -1202,6 +1202,7 @@
     <script defer src="../assets/js/plugins/swiper.js"></script>
     <script defer src="../assets/js/main.js"></script>
     <script defer src="../assets/js/mobile-optimizations.js"></script>
+    <script defer src="../assets/js/mobile-nav.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const projectBlocks = document.querySelectorAll(".project-block-four");
