--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet preload" href="assets/css/style.css" as="style" />
     <link
       rel="stylesheet preload"
-      href="assets/css/mobile-optimizations.css"
+      href="assets/css/mobile-nav.css"
       as="style"
     />
     <style>
@@ -1648,6 +1648,7 @@
     <script defer src="assets/js/plugins/swiper.js"></script>
     <script defer src="assets/js/main.js"></script>
     <script defer src="assets/js/mobile-optimizations.js"></script>
+    <script defer src="assets/js/mobile-nav.js"></script>
 
     <!-- Product Stacking Effect Script -->
     <script>
