--- a/pages/new-age-technologies.html
+++ b/pages/new-age-technologies.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet preload" href="../assets/css/style.css" as="style" />
     <link
       rel="stylesheet preload"
-      href="../assets/css/mobile-optimizations.css"
+      href="../assets/css/mobile-nav.css"
       as="style"
     />
   </head>
@@ -819,5 +819,6 @@
     <script defer src="../assets/js/plugins/swiper.js"></script>
     <script defer src="../assets/js/main.js"></script>
     <script defer src="../assets/js/mobile-optimizations.js"></script>
+    <script defer src="../assets/js/mobile-nav.js"></script>
   </body>
 </html>
