--- a/index.html
+++ b/index.html
@@ -347,8 +347,10 @@
   <!-- Banner Section - IT Solutions Hero -->
   <div class="banner-swiper-main-wrapper-one">
     <div class="banner-video-wrapper">
-      <video class="banner-video" autoplay muted loop playsinline>
-        <source src="./assets/videos/hero.mp4" type="video/mp4" />
+
+      <video class="banner-video" autoplay muted loop playsinline preload="auto">
+        <source src="assets/videos/hero.mp4" type="video/mp4">
+        Your browser does not support the video tag.
       </video>
 
       <div class="banner-video-overlay"></div>
@@ -377,6 +379,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </div>
 
