--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
     <div class="banner-video-wrapper">
 
       <video class="banner-video" autoplay muted loop playsinline preload="auto">
-        <source src="assets/videos/hero.mp4" type="video/mp4">
+        <source src="assets/videos/hero.MP4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
 
@@ -361,13 +361,10 @@
             <div class="col-lg-12">
               <div class="banner-style-one-wrapper-inner">
                 <h2>
-                  Technology that Keeps Your Operations Steady, Secure &
-                  Connected
+                  Powering Intelligence Solutions
                 </h2>
                 <p>
-                  We help organisations run their IT, networks, data,
-                  security, and emerging technology needs with clarity,
-                  consistency, and long-term stability.
+                 We support organisations with IT, networks, data, security, and emerging technology—built for clarity and long-term stability.
                 </p>
                 <div class="button-wrapper">
                   <a href="pages/about.html" class="rts-btn btn-primary btn-white">
