--- a/index.html
+++ b/index.html
@@ -171,54 +171,39 @@
                                 <a href="pages/ai-intelligent-solutions.html">
                                   <div class="single-service-menu">
                                     <div class="icon">
-                                      <img src="./assets/images/feature/01.svg" alt="AI" />
+                                      <img src="assets/images/feature/01.svg" alt="AI" />
                                     </div>
                                     <div class="info">
-                                      <h5 class="title">
-                                        AI-Based & Intelligent Technology
-                                      </h5>
-                                      <p class="details">
-                                        Smart systems for monitoring,
-                                        automation, and analytics.
-                                      </p>
+                                      <h5 class="title">AI Intelligent Systems</h5>
+                                      <p class="details">Smart platforms for automation, monitoring, and decision-making</p>
                                     </div>
                                   </div>
                                 </a>
                               </li>
 
                               <li>
-                                <a href="pages/it-network-solutions.html">
+                                <a href="pages/connectivity-solutions.html">
                                   <div class="single-service-menu">
                                     <div class="icon">
-                                      <img src="./assets/images/feature/02.svg" alt="IT" />
+                                      <img src="assets/images/feature/04.svg" alt="Connectivity" />
                                     </div>
                                     <div class="info">
-                                      <h5 class="title">
-                                        IT & Network Solutions
-                                      </h5>
-                                      <p class="details">
-                                        Reliable infrastructure and network
-                                        environments.
-                                      </p>
+                                      <h5 class="title">Connectivity Solutions Network</h5>
+                                      <p class="details">Structured wired and wireless connectivity for enterprises</p>
                                     </div>
                                   </div>
                                 </a>
                               </li>
 
                               <li>
-                                <a href="pages/security-surveillance.html">
+                                <a href="pages/data-bi-analytics.html">
                                   <div class="single-service-menu">
                                     <div class="icon">
-                                      <img src="./assets/images/feature/03.svg" alt="Security" />
+                                      <img src="assets/images/feature/05.svg" alt="Analytics" />
                                     </div>
                                     <div class="info">
-                                      <h5 class="title">
-                                        Security & Surveillance
-                                      </h5>
-                                      <p class="details">
-                                        Integrated monitoring and access
-                                        systems.
-                                      </p>
+                                      <h5 class="title">Data BI Analytics</h5>
+                                      <p class="details">Converting operational data into actionable business insights</p>
                                     </div>
                                   </div>
                                 </a>
@@ -229,38 +214,14 @@
                           <div class="col-lg-4">
                             <ul class="mega-menu-item parent-nav">
                               <li>
-                                <a href="pages/connectivity-solutions.html">
+                                <a href="pages/it-network-solutions.html">
                                   <div class="single-service-menu">
                                     <div class="icon">
-                                      <img src="./assets/images/feature/04.svg" alt="Connectivity" />
+                                      <img src="assets/images/feature/02.svg" alt="IT" />
                                     </div>
                                     <div class="info">
-                                      <h5 class="title">
-                                        Connectivity Solutions
-                                      </h5>
-                                      <p class="details">
-                                        Structured wired and wireless
-                                        connectivity.
-                                      </p>
-                                    </div>
-                                  </div>
-                                </a>
-                              </li>
-
-                              <li>
-                                <a href="pages/data-bi-analytics.html">
-                                  <div class="single-service-menu">
-                                    <div class="icon">
-                                      <img src="./assets/images/feature/05.svg" alt="Analytics" />
-                                    </div>
-                                    <div class="info">
-                                      <h5 class="title">
-                                        Data, BI & Analytics
-                                      </h5>
-                                      <p class="details">
-                                        Turning operational data into
-                                        insights.
-                                      </p>
+                                      <h5 class="title">IT Network Solutions</h5>
+                                      <p class="details">Secure, scalable IT infrastructure and network environments</p>
                                     </div>
                                   </div>
                                 </a>
@@ -270,15 +231,25 @@
                                 <a href="pages/new-age-technologies.html">
                                   <div class="single-service-menu">
                                     <div class="icon">
-                                      <img src="./assets/images/feature/06.svg" alt="Emerging Tech" />
+                                      <img src="assets/images/feature/06.svg" alt="Emerging Tech" />
                                     </div>
                                     <div class="info">
-                                      <h5 class="title">
-                                        New-Age Technologies
-                                      </h5>
-                                      <p class="details">
-                                        IoT, blockchain, and emerging systems.
-                                      </p>
+                                      <h5 class="title">Advanced Digital Technologies</h5>
+                                      <p class="details">IoT, blockchain, and next-generation digital systems</p>
+                                    </div>
+                                  </div>
+                                </a>
+                              </li>
+
+                              <li>
+                                <a href="pages/security-surveillance.html">
+                                  <div class="single-service-menu">
+                                    <div class="icon">
+                                      <img src="assets/images/feature/03.svg" alt="Security" />
+                                    </div>
+                                    <div class="info">
+                                      <h5 class="title">Security Surveillance Systems</h5>
+                                      <p class="details">Integrated monitoring, access control, and safety solutions</p>
                                     </div>
                                   </div>
                                 </a>
@@ -287,15 +258,11 @@
                                 <a href="pages/software-engineering.html">
                                   <div class="single-service-menu">
                                     <div class="icon">
-                                      <img src="./assets/images/feature/07.svg" alt="Emerging Tech" />
+                                      <img src="assets/images/feature/07.svg" alt="Software Engineering" />
                                     </div>
                                     <div class="info">
-                                      <h5 class="title">
-                                        Software Engineering Services
-                                      </h5>
-                                      <p class="details">
-                                        design and Development applications
-                                      </p>
+                                      <h5 class="title">Software Engineering Services</h5>
+                                      <p class="details">End-to-end application design, development, and support</p>
                                     </div>
                                   </div>
                                 </a>
@@ -630,7 +597,7 @@
                                 <img src="assets/images/about/icons/12.svg" alt="" />
                               </div>
                               <div class="content">
-                                <h5>25+</h5>
+                                <h5>10+</h5>
                                 <p>Year IT Experience</p>
                               </div>
                             </li>
@@ -639,7 +606,7 @@
                                 <img src="assets/images/about/icons/13.svg" alt="" />
                               </div>
                               <div class="content">
-                                <h5>23K</h5>
+                                <h5>50+</h5>
                                 <p>Wonderful Client</p>
                               </div>
                             </li>
@@ -648,7 +615,7 @@
                                 <img src="assets/images/about/icons/14.svg" alt="" />
                               </div>
                               <div class="content">
-                                <h5>2M</h5>
+                                <h5>300</h5>
                                 <p>Project Done</p>
                               </div>
                             </li>
@@ -678,16 +645,16 @@
                             always equipped with the latest tools and
                             strategies for success.
                           </p>
-                          <div class="signature-area-wrapper">
+                          <!-- <div class="signature-area-wrapper">
                             <img src="assets/images/others/sign-03.svg" alt="signature" />
-                          </div>
-                          <div class="clients-area-clients">
+                          </div> -->
+                          <!-- <div class="clients-area-clients">
                             <img src="assets/images/about/avatar.png" alt="about" />
                             <p class="disc">
                               2.5k Client Connect with <br />
                               our Company
                             </p>
-                          </div>
+                          </div> -->
                         </div>
                       </div>
                     </div>
@@ -1160,25 +1127,6 @@
 
   <!-- Footer -->
   <div class="rts-footer-one pt--50 bg_dark">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="call-to-action-area-top-footer-three">
-            <div class="left-area">
-              <span>Subscribe to Our Newsletter</span>
-            </div>
-            <div class="right-area">
-              <form action="#">
-                <input type="email" placeholder="Enter your email..." required />
-                <button class="rts-btn btn-primary" type="submit">
-                  Subscribe
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="container pb--80">
       <div class="row">
         <div class="col-lg-3">
@@ -1187,7 +1135,7 @@
               <img src="assets/images/logo/02.svg" alt="SOS Infocity" />
             </a>
             <p class="disc">
-              Leading provider of IT solutions and cybersecurity services.
+              Powering Intelligent Solutions
             </p>
             <ul class="social-wrapper">
               <li>
@@ -1211,7 +1159,7 @@
               <h6 class="title">Company</h6>
               <ul>
                 <li><a href="pages/about.html">About Us</a></li>
-                <li><a href="pages/life-at-sos.html">Careers</a></li>
+                <li><a href="pages/life-at-sos.html">Life at SOS</a></li>
                 <li><a href="pages/impact.html">Case Studies</a></li>
                 <li><a href="pages/connect.html">Contact</a></li>
               </ul>
@@ -1219,19 +1167,13 @@
             <div class="single">
               <h6 class="title">Services</h6>
               <ul>
-                <li><a href="pages/solutions.html">All Solutions</a></li>
-                <li><a href="pages/solutions.html">Cybersecurity</a></li>
-                <li><a href="pages/solutions.html">Cloud Services</a></li>
-                <li><a href="pages/solutions.html">IT Consulting</a></li>
-              </ul>
-            </div>
-            <div class="single">
-              <h6 class="title">Resources</h6>
-              <ul>
-                <li><a href="#">Support Center</a></li>
-                <li><a href="#">Documentation</a></li>
-                <li><a href="#">Community</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="pages/ai-intelligent-solutions.html">AI Intelligent Solutions</a></li>
+                <li><a href="pages/it-network-solutions.html">IT & Network Solutions</a></li>
+                <li><a href="pages/security-surveillance.html">Security & Surveillance</a></li>
+                <li><a href="pages/connectivity-solutions.html">Connectivity Solutions</a></li>
+                <li><a href="pages/data-bi-analytics.html">Data, BI & Analytics</a></li>
+                <li><a href="pages/new-age-technologies.html">New-Age Technologies</a></li>
+                <li><a href="pages/software-engineering.html">Software Engineering</a></li>
               </ul>
             </div>
             <div class="single">
@@ -1265,13 +1207,8 @@
                 <script>
                   document.write(new Date().getFullYear());
                 </script>
-                . SOS Infocity. All Rights Reserved.
+                . SOS Infocity. All Rights Reserved. <br /> Designed & Developed by <a href="https://greyplatforms.com" target="_blank">Grey Platforms</a>
               </p>
-              <ul>
-                <li><a href="pages/about.html">Privacy Policy</a></li>
-                <li><a href="#">Terms of Service</a></li>
-                <li><a href="#">Sitemap</a></li>
-              </ul>
             </div>
           </div>
         </div>
