--- a/pages/connect.html
+++ b/pages/connect.html
@@ -65,13 +65,8 @@
                                         />
                                       </div>
                                       <div class="info">
-                                        <h5 class="title">
-                                          AI-Based & Intelligent Technology
-                                        </h5>
-                                        <p class="details">
-                                          Smart systems for monitoring,
-                                          automation, and analytics.
-                                        </p>
+                                        <h5 class="title">AI Intelligent Systems</h5>
+                                        <p class="details">Smart platforms for automation, monitoring, and decision-making</p>
                                       </div>
                                     </div>
                                   </a>
@@ -87,13 +82,8 @@
                                         />
                                       </div>
                                       <div class="info">
-                                        <h5 class="title">
-                                          IT & Network Solutions
-                                        </h5>
-                                        <p class="details">
-                                          Reliable infrastructure and network
-                                          environments.
-                                        </p>
+                                        <h5 class="title">Connectivity Solutions Network</h5>
+                                        <p class="details">Structured wired and wireless connectivity for enterprises</p>
                                       </div>
                                     </div>
                                   </a>
@@ -109,13 +99,8 @@
                                         />
                                       </div>
                                       <div class="info">
-                                        <h5 class="title">
-                                          Security & Surveillance
-                                        </h5>
-                                        <p class="details">
-                                          Integrated monitoring and access
-                                          systems.
-                                        </p>
+                                        <h5 class="title">Data BI Analytics</h5>
+                                        <p class="details">Converting operational data into actionable business insights</p>
                                       </div>
                                     </div>
                                   </a>
@@ -135,13 +120,8 @@
                                         />
                                       </div>
                                       <div class="info">
-                                        <h5 class="title">
-                                          Connectivity Solutions
-                                        </h5>
-                                        <p class="details">
-                                          Structured wired and wireless
-                                          connectivity.
-                                        </p>
+                                        <h5 class="title">IT Network Solutions</h5>
+                                        <p class="details">Secure, scalable IT infrastructure and network environments</p>
                                       </div>
                                     </div>
                                   </a>
@@ -157,13 +137,8 @@
                                         />
                                       </div>
                                       <div class="info">
-                                        <h5 class="title">
-                                          Data, BI & Analytics
-                                        </h5>
-                                        <p class="details">
-                                          Turning operational data into
-                                          insights.
-                                        </p>
+                                        <h5 class="title">Advanced Digital Technologies</h5>
+                                        <p class="details">IoT, blockchain, and next-generation digital systems</p>
                                       </div>
                                     </div>
                                   </a>
@@ -179,12 +154,8 @@
                                         />
                                       </div>
                                       <div class="info">
-                                        <h5 class="title">
-                                          New-Age Technologies
-                                        </h5>
-                                        <p class="details">
-                                          IoT, blockchain, and emerging systems.
-                                        </p>
+                                        <h5 class="title">Security Surveillance Systems</h5>
+                                        <p class="details">Integrated monitoring, access control, and safety solutions</p>
                                       </div>
                                     </div>
                                   </a>
@@ -199,12 +170,8 @@
                                         />
                                       </div>
                                       <div class="info">
-                                        <h5 class="title">
-                                          Software Engineering Services
-                                        </h5>
-                                        <p class="details">
-                                          design and Development applications
-                                        </p>
+                                        <h5 class="title">Software Engineering Services</h5>
+                                        <p class="details">End-to-end application design, development, and support</p>
                                       </div>
                                     </div>
                                   </a>
@@ -583,7 +550,7 @@
               <a class="logo" href="../index.html"
                 ><img src="../assets/images/logo/02.svg" alt="Logo"
               /></a>
-              <p class="disc">Your trusted IT and cybersecurity partner.</p>
+              <p class="disc">Powering Intelligent Solutions</p>
               <ul class="social-wrapper">
                 <li>
                   <a href="#" aria-label="Facebook"
@@ -609,7 +576,7 @@
                 <h6 class="title">Company</h6>
                 <ul>
                   <li><a href="about.html">About</a></li>
-                  <li><a href="life-at-sos.html">Careers</a></li>
+                  <li><a href="life-at-sos.html">Life at SOS</a></li>
                   <li><a href="impact.html">Case Studies</a></li>
                   <li><a href="connect.html">Contact</a></li>
                 </ul>
@@ -617,32 +584,13 @@
               <div class="single">
                 <h6 class="title">Services</h6>
                 <ul>
-                  <li><a href="solutions.html">Solutions</a></li>
-                  <li><a href="solutions.html">Cybersecurity</a></li>
-                  <li><a href="solutions.html">Cloud Services</a></li>
-                  <li><a href="solutions.html">Consulting</a></li>
-                </ul>
-              </div>
-              <div class="single">
-                <h6 class="title">Resources</h6>
-                <ul>
-                  <li><a href="#">Support</a></li>
-                  <li><a href="#">Documentation</a></li>
-                  <li><a href="#">Community</a></li>
-                  <li><a href="#">Blog</a></li>
-                </ul>
-              </div>
-              <div class="single">
-                <h6 class="title">Legal</h6>
-                <ul>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Security</a></li>
-                  <li><a href="#">Sitemap</a></li>
-                  <p>
-                    Legal Registration Number:<br />
-                    U72200OR2016PTC020083
-                  </p>
+                  <li><a href="ai-intelligent-solutions.html">AI Intelligent Solutions</a></li>
+                  <li><a href="it-network-solutions.html">IT & Network Solutions</a></li>
+                  <li><a href="security-surveillance.html">Security & Surveillance</a></li>
+                  <li><a href="connectivity-solutions.html">Connectivity Solutions</a></li>
+                  <li><a href="data-bi-analytics.html">Data, BI & Analytics</a></li>
+                  <li><a href="new-age-technologies.html">New-Age Technologies</a></li>
+                  <li><a href="software-engineering.html">Software Engineering</a></li>
                 </ul>
               </div>
             </div>
@@ -659,13 +607,8 @@
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  SOS Infocity. All Rights Reserved.
+                  SOS Infocity. All Rights Reserved. <br /> Designed & Developed by <a href="https://greyplatforms.com" target="_blank">Grey Platforms</a>
                 </p>
-                <ul>
-                  <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Terms & Conditions</a></li>
-                  <li><a href="connect.html">Contact</a></li>
-                </ul>
               </div>
             </div>
           </div>
